# lingwi

./: .clangd  .gitignore  .main.c.swp  BUILD.sh  CMakeLists.txt  INSTALL.sh  LICENCE  Makefile  README.txt  REMOVE.sh  TODO.txt  lingwi  main.c
inc/: lingwi-utils.h  lingwi.h
src/: lingwi-core.c  lingwi-main.c  lingwi-opt.c  lingwi-trans.c  lingwi-utils.c
tests/: CMakeLists.txt  translation_tests.cpp
